# Match-Simulation

./: .gitignore  CMakeLists.txt  Match.cpp  Match.h  Player.cpp  Player.h  README.md  Tactic.cpp  Tactic.h  Team.cpp  Team.h  database.csv  database.db  main.cpp  script.py  stats.txt
GUI/: index.html  index.js  log.txt  main.js  match.html  match.js  package-lock.json  package.json  preload.js  renderer.js  vite.config.js
GUI/src/: indexRenderer.js  matchRenderer.js
GUI/src/components/: App.vue  Match.vue
GUI/src/router/: index.js
MatchSimulation/: 130ArsenalCity.txt  CMakeLists.txt  Match.cpp  Match.h  Player.cpp  Player.h  Tactic.cpp  Tactic.h  Team.cpp  Team.h  main.cpp  stats.txt
